# Hexas

./: .gitignore  Hexas.sln  LICENSE.txt  README.txt  install
.github/workflows/: cmake-multi-platform.yml
Hexas/: Hexas.vcxproj  Hexas.vcxproj.filters  README.txt  WORKFLOW.txt  asm_example.csv  assembly.c  assembly.h  cpp.hint  data_structures.c  data_structures.h  elf.c  expand.c  expand.h  files.c  files.h  formats.h  h_errors.c  h_errors.h  intel_hex.c  linkedlist.c  linkedlist.h  main.c  parser.c  parser.h  pe.c  str.c  str.h  table.c  table.h
languages/: asm_example.csv
src/: CMakeLists.txt  WORKFLOW.txt  main.c
src/assembler/: assembly.c  assembly.h
src/data/: data_structures.c  data_structures.h  linkedlist.h  str.c  str.h  table.c  table.h
src/error/: enum.h
